[package]
name = "gtk-rlottie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk =  { version = ">=0.4", package = "gtk4" }
# rlottie = "0.5.0"
rlottie = { git = "https://github.com/melix99/telegram-rlottie-rs" }
flate2 = "1.0.24"


